<resources>
    <string name="no">No</string>
    <string name="na">N/A</string>
    <string name="zero">0</string>
    <string name="cross">X</string>
    <string name="yes">Yes</string>
    <string name="faq">FAQ</string>
    <string name="map">Map</string>
    <string name="hyphen">-</string>
    <string name="equals">=</string>
    <string name="empty">""</string>
    <string name="num_one">1</string>
    <string name="open">Open</string>
    <string name="home">Home</string>
    <string name="male">Male</string>
    <string name="login">Login</string>
    <string name="other">Other</string>
    <string name="theme">Theme</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="yk_logo">Logo</string>
    <string name="dialog">Dialog</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="images">Images</string>
    <string name="result">Result</string>
    <string name="signup">Signup</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="gender">Gender:</string>
    <string name="sports">Sports:</string>
    <string name="go_back">Go Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="test_one">Test 1</string>
    <string name="test_six">Test 6</string>
    <string name="my_name">My Name</string>
    <string name="test_two">Test 2</string>
    <string name="dismiss">Dismiss</string>
    <string name="details">Details</string>
    <string name="welcome">Welcome</string>
    <string name="refresh">Refresh</string>
    <string name="country">Country:</string>
    <string name="app_name">MP 2024</string>
    <string name="test_four">Test 4</string>
    <string name="test_five">Test 5</string>
    <string name="services">Services</string>
    <string name="switcher">Switcher</string>
    <string name="activity">Activity</string>
    <string name="kyc_form">KYC Form</string>
    <string name="football">Football</string>
    <string name="test_three">Test 3</string>
    <string name="enter_id">Enter id</string>
    <string name="list_view">List View</string>
    <string name="calculate">Calculate</string>
    <string name="show_less">Show Less</string>
    <string name="anonymous">Anonymous</string>
    <string name="badminton">Badminton</string>
    <string name="grid_view">Grid View</string>
    <string name="third_row">Third Row</string>
    <string name="first_row">First Row</string>
    <string name="full_name">Full Name:</string>
    <string name="volleyball">Volleyball</string>
    <string name="second_row">Second Row</string>
    <string name="basketball">Basketball</string>
    <string name="alert_title">Successful</string>
    <string name="hello_world">Hello World</string>
    <string name="fragment_one">Fragment One</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="name_hint">Enter your name</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="entered_text">Entered text:</string>
    <string name="enter_name">Enter your name</string>
    <string name="calculate_sum">Calculate Sum</string>
    <string name="map_description">This is map</string>
    <string name="email_hint">Enter your email</string>
    <string name="phone_hint">Enter your phone</string>
    <string name="map_title">Look at this map!</string>
    <string name="happy_dashain">Happy Dashain</string>
    <string name="profile_server">Profile Server</string>
    <string name="list_item_title">This is Title</string>
    <string name="not_interested">Not Interested</string>
    <string name="page_not_found">Page not found</string>
    <string name="headphone_image">Pink Headphone</string>
    <string name="profile_details">Profile Details</string>
    <string name="data_from_db">Data from database</string>
    <string name="enter_address">Enter your address</string>
    <string name="select_gender">Select your gender</string>
    <string name="data_from_server">Data from Server</string>
    <string name="custom_grid_view">Custom Grid View</string>
    <string name="password_hint">Enter your password</string>
    <string name="custom_list_view">Custom List View</string>
    <string name="choose_pokemon">Choose Your Pokemon</string>
    <string name="pokemon_recycler_list">Pokemon List</string>
    <string name="choose_country">Choose your country</string>
    <string name="full_name_hint">Enter your full name</string>
    <string name="remember_password">Remember password?</string>
    <string name="positive">You pressed positive button</string>
    <string name="negative">You pressed negative button</string>
    <string name="recycler_view_list">Recycler View List</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="account_exists">Already have an account?</string>
    <string name="profile_icon_button">Profile icon button</string>
    <string name="sports_question">Which sports do you like?</string>
    <string name="account_not_exists">Don\'t have an account?</string>
    <string name="profile_details_server">Profile Details Server</string>
    <string name="accept_terns">I accept all terms and conditions</string>
    <string name="alert_message">Do you want to be successful in life?</string>
    <string name="list_item_description">This is description of the list item.</string>

    <string name="star_emoji">⭐️</string>
    <string name="rocket_emoji">🚀</string>

    <string-array name="country_list">
        <item>Nepal</item>
        <item>India</item>
        <item>China</item>
        <item>Japan</item>
        <item>Australia</item>
    </string-array>

    <string-array name="planet_list">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
    </string-array>

    <string-array name="pokemon_list">
        <item>Absol</item>
        <item>Snivy</item>
        <item>Eevee</item>
        <item>Gengar</item>
        <item>Mudkip</item>
        <item>Litten</item>
        <item>Mawile</item>
        <item>Froakie</item>
        <item>Jolteon</item>
        <item>Flareon</item>
        <item>Snorlax</item>
        <item>Lucario</item>
        <item>Mimikyu</item>
        <item>Turtwig</item>
        <item>Vaporeon</item>
        <item>Cyndaquil</item>
        <item>Bulbasaur</item>
        <item>Scorbunny</item>
        <item>Dragonite</item>
        <item>Tyranitar</item>
    </string-array>

    <string-array name="custom_title_list">
        <item>Bulbasaur</item>
        <item>Charmander</item>
        <item>Squirtle</item>
        <item>Pikachu</item>
        <item>Eevee</item>
        <item>Mewtwo</item>
        <item>Gengar</item>
        <item>Dragonite</item>
        <item>Alakazam</item>
        <item>Arcanine</item>
    </string-array>

    <string-array name="custom_description_list">
        <item>Seed Pokemon, starter from Kanto (かんとう)</item>
        <item>Fire lizard Pokemon, starter from Kanto (かんとう)</item>
        <item>Tiny Turtle Pokemon, starter from Kanto (かんとう)</item>
        <item>Electric mouse Pokemon, mascot of the franchise</item>
        <item>Evolution Pokemon with many possible evolutions</item>
        <item>Legendary Psychic Pokemon from Kanto (かんとう). This is known to be one of the most powerful creature in the history.</item>
        <item>Shadow Pokemon and final form of Gastly</item>
        <item>Powerful Dragon Pokemon and final form of Dratini</item>
        <item>Psychic Pokemon with high Special Attack stats</item>
        <item>Mysterious Psychic Pokemon with high Special Defense</item>
    </string-array>

    <integer-array name="custom_image_list">
        <item>@drawable/pokemon_bulbasur</item>
        <item>@drawable/pokemon_charmander</item>
        <item>@drawable/pokemon_squirtle</item>
        <item>@drawable/pokemon_pikachu</item>
        <item>@drawable/pokemon_eeve</item>
        <item>@drawable/pokemon_mewtwo</item>
        <item>@drawable/pokemon_gengar</item>
        <item>@drawable/pokemon_dragonite</item>
        <item>@drawable/pokemon_alakazam</item>
        <item>@drawable/pokemon_arcanine</item>
    </integer-array>
</resources>
