<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".unit_3.Columns">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_teal"
        android:gravity="center"
        android:text="@string/first_row"
        android:textSize="35sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_orange"
        android:gravity="center"
        android:text="@string/second_row"
        android:textSize="35sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/third_row"
        android:textColor="@color/white"
        android:textSize="35sp" />
</LinearLayout>
