<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_teal"
    android:padding="20dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:background="@color/dark_purple"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/test_one"
            android:textColor="@color/light_teal"
            android:textSize="40sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:background="@color/dark_teal"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/test_two"
            android:textColor="@color/light_teal"
            android:textSize="40sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:background="@color/darker_purple"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/test_three"
            android:textColor="@color/light_teal"
            android:textSize="40sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:background="@color/hard_pink"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/test_four"
            android:textColor="@color/light_teal"
            android:textSize="40sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/test_five"
            android:textColor="@color/light_teal"
            android:textSize="40sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:background="@color/light_orange"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/test_six"
            android:textColor="@color/gray"
            android:textSize="40sp" />
    </TableRow>
</TableLayout>
