<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_teal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="40dp"
        android:layout_y="40dp"
        android:background="@color/dark_purple"
        android:fontFamily="sans-serif-condensed"
        android:padding="20dp"
        android:text="@string/test_one"
        android:textColor="@color/light_teal"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="140dp"
        android:layout_y="120dp"
        android:background="@color/dark_teal"
        android:fontFamily="sans-serif-condensed"
        android:padding="20dp"
        android:text="@string/test_two"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="240dp"
        android:layout_y="205dp"
        android:background="@color/light_orange"
        android:fontFamily="sans-serif-condensed"
        android:padding="20dp"
        android:text="@string/test_three"
        android:textColor="@color/black"
        android:textSize="40sp" />
</AbsoluteLayout>
