<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userListItemRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="@drawable/dark_ripple"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <TextView
        android:id="@+id/userListItemId"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/num_one"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/userListItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/userListItemId"
        android:text="@string/name_hint"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/userListItemAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userListItemName"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/userListItemId"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/enter_address"
        android:textColor="@color/dark_gray"
        android:textSize="18sp" />
</RelativeLayout>
